solc_ossfuzz_seed_corpus/test_sol/test_52dbbc7d0c4fd6fe72723a4793e624b74e2b20503adde3e3441bfc05b8e30532_aba2195c3084bdb3c0cfb7b2966695d774898c27_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(string memory i0,bytes memory i1)     returns(function (uint48, int248, bool) external   returns (function (bytes19, uint48[] memory, bytes20[] memory) internal  , function (address payable[1] memory) external   returns (int112)) o0,bool o1)
{
  function () internal   l0;
}
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
// ----
// TypeError 2582: (su0.sol:110-175): Internal type cannot be used for external function type.
